# mnemon

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  compose.yaml  hooks.example.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
src/mnemon/: __init__.py  api.py  auth.py  canonical.py  chunking.py  config.py  db.py  hooks.py  ingest.py  kg.py  memory.py  parsers.py  resolver.py  server.py  vectorstore.py
tests/: conftest.py  test_api.py  test_auth.py  test_backup.py  test_canonical.py  test_chunking.py  test_db.py  test_hooks.py  test_ingest.py  test_kg.py  test_memory.py  test_parsers.py  test_resolver.py  test_server.py  test_vectorstore.py
